<resources>
    <string name="app_name">KnowYou</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="look">随便看看</string>
    <string name="other_logins">其他登录方式</string>
    <string name="user">用户名:</string>
    <string name="passwd">密码:</string>
    <string name="load">Welcome!</string>
    <string name="forget">忘记密码?</string>
    <string name="search_hint">搜索旅游城市或者驴友</string>
    <string name="theme">最新主题</string>
    <string name="month">精选月刊</string>
    <string name="share">热门分享</string>
    <string name="introduce">\t\t维多利亚港是香港最珍贵的财富之一，无论您到过香港多少趟，仍会被她的绝色风华所迷醉。繁华的维多利亚港是香港都会的缩影，要感受其中，最好的方法就是到尖沙咀海滨花园去。位于香港的香港岛和九龙半岛之间的港口和海域。
        \n\t\t【给你N个理由】
维多利亚港水面宽阔，景色迷人，海港的西北部有世界最大的集装箱运输中心之一的「葵涌货柜码头」。每天日出日落，繁忙的渡海小轮穿梭于南北两岸之间，渔船、邮轮、观光船、万吨巨轮和它们鸣放的汽笛声，交织出一幅美妙的海上繁华景致。
维多利亚港的海岸线很长，南北两岸的景点多不胜数。香港岛一岸既有充满现代感的高楼大厦和已成地标的香港会展新翼，也曾有怀旧的天星小轮码头（已拆除）；九龙则有香港艺术馆和香港太空馆。维多利亚港日间蓝天白云碧水，小船和万吨巨轮进出海港，互不干扰，到了夜晚便更加灯火璀璨，缔造“东方之珠”的壮丽夜景。香港有多种海上观光船，其中天星小轮最受欢迎。乘坐已有百年历史的天星小轮，一个繁荣璀璨的美丽海港尽入眼帘；熙来攘往的船艇，升降频密的航机，泊在港湾的国际邮轮，瑰丽壮观的会展新翼。
近年来，每逢迎新年的除夕夜，都有数十万名香港市民聚集在维多利亚港两岸庆祝新年的来临。在2007年12月31日的除夕夜，就有40万名市民聚集在港口的南北两边庆祝新年倒数，而且是香港最高的建筑物国际金融中心二期首次在楼顶施放烟花表演，景况热闹，蔚为奇观。
不要错过每晚8:00“幻彩咏香江”！以享誉全球的维多利亚港作舞台，“演员”就是耸立在维港两岸的摩天大楼。逾40幢大楼在维港的璀璨夜色下，随着充满节奏感的音乐，发放缤纷又闪跃的灯光、激光，为维港两岸无数观众，上演一场打破吉尼斯世界纪录的“全球最大型灯光音乐汇演”！
        \n\t\t【最佳观赏地点】
\n\t\t1．太平山顶可远眺维多利亚港及九龙半岛
\n\t\t2．从尖沙咀海旁眺望。
\n\t\t3．搭乘渡海小轮以及其他海上观光船只。（维港海上游、香港海龙游等海上观光服务）</string>
</resources>
