<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <TableLayout
        android:id="@+id/table"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:src="@drawable/user"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <EditText
                android:hint="请输入用户名"
                android:inputType="text"
                android:layout_weight="5"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_marginTop="4dp"
                android:src="@drawable/passwd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <EditText
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:layout_weight="5"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/login"
        android:layout_below="@id/table"
        android:background="@drawable/login_button_style"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <RelativeLayout
        android:layout_below="@id/login"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="5dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/look"
            android:textSize="18sp"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look"/>

        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/forget"
            android:text="@string/forget"
            android:textSize="18sp"
            android:gravity="start"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <TextView
        android:id="@+id/other_logins"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_logins"/>

    <LinearLayout
        android:id="@+id/icons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/qq"
            android:src="@drawable/qq"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/weixin"
            android:src="@drawable/weixin"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/xinlang"
            android:src="@drawable/xinlang"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>