<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcus.knowYou.MainActivity">

    <TableLayout
        android:layout_marginTop="70dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:src="@drawable/user"

                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <EditText
                android:hint="请输入用户名"
                android:layout_weight="5"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:src="@drawable/passwd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <EditText
                android:hint="请输入密码"
                android:password="true"
                android:layout_weight="5"/>
        </TableRow>

    </TableLayout>


    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#234"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/register"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/register"
            android:textColor="#234"
            android:textStyle="bold"
            android:textSize="25sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/other_logins"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_logins"/>

    <LinearLayout
        android:id="@+id/icons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/qq"
            android:src="@drawable/qq"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/weixin"
            android:src="@drawable/weixin"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/xinlang"
            android:src="@drawable/xinlang"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
