<?xml version="1.0" encoding="utf-8"?>
<com.emilsjolander.components.StickyScrollViewItems.StickyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:tag="sticky"
            android:layout_marginTop="6dp"
            android:text="@string/theme"
            android:textSize="16sp"
            android:textColor="@color/color_white"
            android:drawableLeft="@drawable/triangle"
            android:drawableStart="@drawable/triangle"
            android:background="@color/color_cd3e3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.marcus.knowYou.Solutions.ChildViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="80dp">

            </com.example.marcus.knowYou.Solutions.ChildViewPager>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_alignParentBottom="true"
                app:ci_drawable="@color/color_orange"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </RelativeLayout>

        <TextView
            android:tag="sticky"
            android:layout_marginTop="6dp"
            android:text="@string/month"
            android:textSize="16sp"
            android:textColor="@color/color_white"
            android:drawableLeft="@drawable/triangle"
            android:drawableStart="@drawable/triangle"
            android:background="@color/color_cd3e3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:horizontalSpacing="4dp"
            android:numColumns="2" />

        <TextView
            android:tag="sticky"
            android:layout_marginTop="4dp"
            android:text="@string/share"
            android:textSize="16sp"
            android:textColor="@color/color_white"
            android:drawableLeft="@drawable/triangle"
            android:drawableStart="@drawable/triangle"
            android:background="@color/color_cd3e3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:tag="sticky"
            android:background="@color/color_f5f5f5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="全部"
                android:textAlignment="center"
                android:button="@null"
                android:textSize="20sp"
                android:gravity="left|center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="图文"
                android:textAlignment="center"
                android:button="@null"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="视频"
                android:textAlignment="center"
                android:button="@null"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <com.example.marcus.knowYou.Solutions.CustomListView
            android:background="@color/color_white"
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.example.marcus.knowYou.Solutions.CustomListView>

    </LinearLayout>

</com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>